--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "This is an API for SPC19 project",
   "main": "app.js",
   "scripts": {
+    "test": "npx jest --runInBand ./test",
     "prestart": "npm install",
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "keywords": [
     "swagger"
@@ -19,7 +20,11 @@
     "oas3-tools": "2.0.2"
   },
   "devDependencies": {
+    "jest": "^26.6.3",
     "mocha": "^8.2.1",
     "supertest": "^6.1.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
