--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "devDependencies": {
     "jest": "^26.6.3",
+    "mongodb-memory-server": "^6.9.3",
+    "mongoose": "^5.11.12",
     "supertest": "^6.1.1"
   },
   "jest": {
