--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "4.17.1",
     "js-yaml": "3.3.0",
     "jsonwebtoken": "8.5.1",
+    "moment": "^2.29.1",
     "oas-tools": "2.1.8"
   },
   "devDependencies": {
