--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,20 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
+        {
+            "args": [
+                "--runInBand",
+                "${workspaceFolder}/test"
+            ],
+            "internalConsoleOptions": "openOnSessionStart",
+            "name": "Jest Tests",
+            "program": "${workspaceFolder}/node_modules/jest/bin/jest",
+            "request": "launch",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "pwa-node"
+        },
         {
             "type": "node",
             "request": "launch",
@@ -14,6 +27,5 @@
             ],
             "program": "${workspaceFolder}/index.js"
         }
-
     ]
 }
