--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "js-yaml": "3.3.0",
     "jsonwebtoken": "8.5.1",
     "moment": "^2.29.1",
-    "oas-tools": "2.1.8"
+    "oas-tools": "2.1.8",
+    "web3": "^1.2.6",
+    "web3-eea": "^0.10.0",
+    "web3-utils": "^1.3.4",
+    "solc": "^0.8.3"
   },
   "devDependencies": {
     "jest": "^26.6.3",
