--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "1.19.0",
     "cors": "2.8.5",
     "express": "4.17.1",
+    "ibantools": "^3.3.0",
     "js-yaml": "3.3.0",
     "jsonwebtoken": "8.5.1",
     "moment": "^2.29.1",
@@ -23,7 +24,8 @@
     "solc": "^0.8.3",
     "web3": "^1.2.6",
     "web3-eea": "^0.10.0",
-    "web3-utils": "^1.3.4"
+    "web3-utils": "^1.3.4",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "jest": "^26.6.3",
