--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npx jest --runInBand ./test",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "swagger"
@@ -31,6 +32,7 @@
     "jest": "^26.6.3",
     "mongodb-memory-server": "^6.9.3",
     "mongoose": "^5.11.12",
+    "nodemon": "^2.0.7",
     "supertest": "^6.1.1"
   },
   "jest": {
