--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.29.1",
     "oas-tools": "2.1.8",
     "solc": "^0.8.3",
+    "to-uuid": "^0.1.3",
     "web3": "^1.2.6",
     "web3-eea": "^0.10.0",
     "web3-utils": "^1.3.4",
