--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "js-yaml": "3.3.0",
     "jsonwebtoken": "8.5.1",
     "moment": "^2.29.1",
+    "nodemailer": "^6.5.0",
     "oas-tools": "2.1.8",
     "solc": "^0.8.3",
     "to-uuid": "^0.1.3",
