ref: Logging with Pino-js everything in API
Updated: mail-sender logs, deslpliegue-inicial and insuranceService

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npx jest --runInBand ./test",
     "start": "node index.js | pino-pretty -c -t",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js | pino-pretty -c -t"
   },
   "keywords": [
     "swagger"
