--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "Unlicense",
   "private": true,
   "dependencies": {
+    "async-promise-pool": "^1.0.3",
     "body-parser": "1.19.0",
     "cors": "2.8.5",
     "express": "4.17.1",
